# ShixiangWang.github.io

./: .Rprofile  .gitignore  404.qmd  README.md  _quarto.yml  config.toml  config.yaml  draft.md  index.Rmd  index.html  index.qmd  justfile  meta.html  netlify.toml  new.R  resource.qmd  stats.html
add-on-custom-type/: Cargo.toml
add-on-custom-type/src/: main.rs
archetypes/: blog.md
array0/: Cargo.toml
array0/src/: main.rs
art/src/: lib.rs  main.rs
bitops/: Cargo.toml
bitops/src/: main.rs
complex-num/: Cargo.toml
complex-num/src/: main.rs
content/: _index.md  about.md
content/project/: 2020-09-13-shrtcts.md  2021-08-05-cookbook4r-zh.md  2021-08-05-doabsolute.md  2021-08-05-excox.md  2021-08-05-flymaps.md  2021-08-05-geekr.md  2021-08-05-idconverter.md  2021-08-05-install-gistic2.md  2021-08-05-loon.md  2021-08-05-metawho.md  (+7 more)
docs/: 404.html  index.html  index.json  index.xml  listings.json  resource.html  robots.txt  search.json  sitemap.xml
enum0/: Cargo.toml
extra-main/: Cargo.toml
general0/: Cargo.toml
iron-gcd/: Cargo.toml
layouts/: index.html
mandelbrot/: Cargo.toml
match0/: Cargo.toml
method0/: Cargo.toml
minigrep/: poem.txt
print-on-custom-type/: Cargo.toml
static/: _redirects
struct0/: Cargo.toml
trait0/: Cargo.toml
trait1/: Cargo.toml
trait2/: Cargo.toml
trait3-add-two-types/: Cargo.toml
trait4-struct-methods/: Cargo.toml
trait5-method-limit/: Cargo.toml
transformation/: Cargo.toml
vector0/: Cargo.toml
vector1-trait-feature/: Cargo.toml
world-hello/: Cargo.toml
world-hello/src/: main.rs
(+702 files in other folders)
